--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "По методу максимального правдоподобия, параметр распределения Бернулли равен отношению количества правильных ответов к количеству всех вопросов: \n",
     "        \n",
-    "$mu_{k}$ = $\\frac{1}{N}$$\\sum_{i=1}^{N} I(x_i)$\n",
+    "$mu_{k} = \\frac{1}{N}\\sum_{i=1}^{N} I(x_i)$\n",
     "\n",
     "где $I(x_i)$ индикатор, равен 1 если игрок ответил правильно но вопрос $x_i$, и 0 в обратном случае\n",
     "\n",
@@ -179,17 +179,17 @@
     "\n",
     "$mu_{mle}$ для игрока k на турнира t равно ($N_t$ - количество вопросов на турнире t):\n",
     "        \n",
-    "1. $mu_{kt}$ = $\\frac{1}{N_t}$$\\sum_{i=1}^{N_t} I(x_i)$\n",
+    "1. $mu_{kt} = \\frac{1}{N_t}\\sum_{i=1}^{N_t} I(x_i)$\n",
     "\n",
     "А вероятность $mu_{k}$ равна (T количество турниров игрока k):\n",
     "        \n",
-    "2. $mu_{k}$ = $\\sum_{t=1}^{T} mu_{kt} * w_{t}$\n",
+    "2. $mu_{k} = \\sum_{t=1}^{T} mu_{kt} * w_{t}$\n",
     "\n",
     "Возникает вопрос чему равен $w_t$. Например в футболе, для меня лично, сложность турнира определяется количеством сильных команд. Например, лига чемпионов выше уровнем чем лига европы, потому что в 1-турнире участвуют больше грандов.\n",
     "\n",
     "Поэтому $w_t$ определим как среднюю силу всех игроков, участвовавших на турнире t ($N_p$ - количество участников на турнире t):\n",
     "\n",
-    "3. $w_t$ = $\\frac{1}{N_p}$$\\sum_{k=1}^{N_p} mu_{k}$\n",
+    "3. $w_t = \\frac{1}{N_p}\\sum_{k=1}^{N_p} mu_{k}$\n",
     "\n",
     "И так, получилось следующее:\n",
     "1. Инициализируем $w_t$ случайными значениями от 0 до 1\n",
