--- a/hw3/hw3.ipynb
+++ b/hw3/hw3.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "'й луесас кле уояоснитесрнзе явнбтз ко ктодом уомаынем гауанич но не яосвпис ни оуножо ьасса га ниш елси в кал елтр кдемй шотесолр ьз вгнатр к пем ьзса оыиьба кеур хто палтр впеьножо ядоeелла яосргвйлр лсвпаем шопв кздагитр кам ождомнвю ьсажоуаднолтр га хтот бвдл хто оуин иг свпыиш бвдлок к моеч цигни елси не свпыич нибоуа не увмас пто ьвув питатр и яониматр ьиыояа науеюлр начти кдемй еnе даг ядолсвыатр каыи себeич и ядодаьотатр кле темз '"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,20 +662,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter 0 : мчхквтзвткукцмврждъахорзфвкхквежбцкврждъахорзфвцмгчцвлв цжсжвчжжшщмркивгжцждзфвхмсгжведжбкцацовчгждммвтчмсжвтзвтчмвчумхахкведаткхоржвквежхлбкцмвъагчкъахорзфвшаххвнавежчхмурммвбмцтмдцжмвнауаркмвглдчавйжцивгжрмбржвивркбмсжврмвжшмщап\n",
+      "iter 0 : мчшквтзвткукнмврждъашорзфвкшквежбнкврждъашорзфвнмгчнвлв нжсжвчжжхщмркивгжнждзфвшмсгжведжбкнановчгждммвтчмсжвтзвтчмвчумшашкведаткшоржвквежшлбкнмвъагчкъашорзфвхашшвцавежчшмурммвбмнтмднжмвцауаркмвглдчавйжнивгжрмбржвивркбмсжврмвжхмщап\n",
       "\n",
-      "iter 15000 : если вы видите нормальный или почти нормальный текст у этого сообщения который легко прочитать скорее всего вы все сделали правильно и получите максимальный балл за последнее четвертое задание курса хотя конечно я ничего не обещаш\n",
+      "iter 15000 : если вы видите норжальный или почти норжальный текст у этого сообщения который легко прочитать скорее всего вы все сделали правильно и получите жаксижальный балл за последнее четвертое задание курса мотя конечно я ничего не обещаш\n",
       "\n",
-      "iter 30000 : если вы видите нормальный или почти нормальный текст у этого сообщения который легко прочитать скорее всего вы все сделали правильно и получите максимальный балл за последнее четвертое задание курса хотя конечно я ничего не обещаъ\n",
+      "iter 30000 : если вы видите нормальный или почти нормальный текст у этого сообщения который легко прочитать скорее всего вы все сделали правильно и получите максимальный балл за последнее четвертое задание курса хотя конечно я ничего не обещаю\n",
       "\n",
-      "Iterations 40000, accepted 1218, rejected 38782\n"
+      "Iterations 40000, accepted 1289, rejected 38711\n"
      ]
     }
    ],
