--- a/hw3/hw3.ipynb
+++ b/hw3/hw3.ipynb
@@ -135,9 +135,11 @@
     "но не получил ни одного балла за них, \n",
     "если у вас есть время, хотелось бы узнать в чем была ошибка, ведь это часть учебного процесса. \n",
     "Пользуясь случаем, хочу выразить Вам огромную благодарность за этот курс. \n",
-    "Это один из лучших курсов в моей жизни, если не лучший. \n",
-    "Никода не думал, что буду читать и понимать Бишопа) \n",
-    "Надеюсь найти время еще раз прослушать Ваши лекций и проработать все темы. \n",
+    "Это один из лучших курсов, которые я проходил и наверное самый интересный. \n",
+    "Никогда не думал, что буду читать и понимать Бишопа) \n",
+    "Надеюсь найти время еще раз прослушать Ваши лекций и проработать все темы, \n",
+    "так как понимаю, что нужно приложить еще больше усилий, чтобы освоить материалы. \n",
+    "Еще раз спасибо! \n",
     "\"\"\""
    ]
   },
@@ -149,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "'я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса Пользуясь случаем хочу выразить Вам огромную благодарность за этот курс Это один из лучших курсов в моей жизни если не лучший Никода не думал что буду читать и понимать Бишопа Надеюсь найти время еще раз прослушать Ваши лекций и проработать все темы '"
+       "'я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса Пользуясь случаем хочу выразить Вам огромную благодарность за этот курс Это один из лучших курсов которые я проходил и наверное самый интересный Никогда не думал что буду читать и понимать Бишопа Надеюсь найти время еще раз прослушать Ваши лекций и проработать все темы так как понимаю что нужно приложить еще больше усилий чтобы освоить материалы Еще раз спасибо '"
       ]
      },
      "execution_count": 9,
@@ -180,7 +182,7 @@
      "output_type": "stream",
      "text": [
       "Зашифрованный текст:\n",
-      "еавыиржраявиаыгцгрмьширом иацюмкш аягаяшгэгхаыгхжтмихащжыжмьсамгамиацгрюзьрамьагымгдгалжрржащжамьпаиврьаюаяжваившоаяэихеапгширгвоал ающмжшоаяазихал ржагтьлкжаяиыоаушгазжвшоаюзилмгдгацэгниввжацгрощюевоаврюзжихапгзюая эжщьшоаяжхагдэгхмюйалрждгыжэмгвшоащжаушгшакюэваушгагыьмаьщарюзтьпакюэвгяаяахгисабьщмьаиврьамиарюзтьсамькгыжамиаыюхжразшгалюыюазьшжшоаьацгмьхжшоальтгцжамжыийвоамжсшьаяэихеаиъиаэжщацэгврютжшоаяжтьарикньсаьацэгэжлгшжшоаявиаших а\n",
+      "еавыиржраявиаыгцгрмьширом иацюмкш аягаяшгэгхаыгхжтмихащжыжмьсамгамиацгрюзьрамьагымгдгалжрржащжамьпаиврьаюаяжваившоаяэихеапгширгвоал ающмжшоаяазихал ржагтьлкжаяиыоаушгазжвшоаюзилмгдгацэгниввжацгрощюевоаврюзжихапгзюая эжщьшоаяжхагдэгхмюйалрждгыжэмгвшоащжаушгшакюэваушгагыьмаьщарюзтьпакюэвгяакгшгэ иаеацэгпгыьраьамжяиэмгиавжх саьмшиэивм самькгдыжамиаыюхжразшгалюыюазьшжшоаьацгмьхжшоальтгцжамжыийвоамжсшьаяэихеаиъиаэжщацэгврютжшоаяжтьарикньсаьацэгэжлгшжшоаявиаших ашжкакжкацгмьхжйазшгамюбмгацэьргбьшоаиъиалгротиаювьрьсазшгл агвягьшоахжшиэьжр аиъиаэжщавцжвьлга\n",
       "Шифр: ['ы' ' ' 'ж' 'с' 'о' 'г' 'я' 'а' 'ч' 'е' 'ю' 'к' 'б' 'н' 'ц' 'ь' 'х' 'л'\n",
       " 'й' 'ш' 'э' 'ф' 'м' 'п' 'ъ' 'т' 'з' 'щ' 'д' 'и' 'р' 'у' 'в'] 33\n"
      ]
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'й луесас кле уояоснитесрнзе явнбтз ко ктодом уомаынем гауанич но не яосвпис ни оуножо ьасса га ниш елси в кал елтр кдемй шотесолр ьз вгнатр к пем ьзса оыиьба кеур хто палтр впеьножо ядоeелла яосргвйлр лсвпаем шопв кздагитр кам ождомнвю ьсажоуаднолтр га хтот бвдл хто оуин иг свпыиш бвдлок к моеч цигни елси не свпыич нибоуа не увмас пто ьвув питатр и яониматр ьиыояа науеюлр начти кдемй еnе даг ядолсвыатр каыи себeич и ядодаьотатр кле темз '"
+       "'й суелал дсе уополтинелртге пктынг до дновом уомабтем зауатич то те полкьил ти оутожо яалла за тиш если к дас еснр двемй шонелоср яг кзтанр д ьем ягла обияыа деур хно ьаснр кьеятожо пвоцесса полрзкйср слкьаем шоьк дгвазинр дам ожвомткe ялажоуавтоснр за хнон ыквс хно оуит из лкьбиш ыквсод ыоновге й пвошоуил и тадевтое самгч итневестгч тиыожуа те укмал ьно якук ьинанр и потиманр яибопа тауеeср тачни двемй еюе ваз пвослкбанр даби леыцич и пвоваяонанр дсе немг наы ыаы потимаe ьно ткnто пвилоnинр еюе яолрбе ксилич ьнояг осдоинр маневиалг еюе ваз спасияо '"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,28 +397,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter 0 : еавыиржраявиаыгнгрмьширом ианюмкш аягаяшгэгхаыгхжтмихащжыжмьсамгамиангрюзьрамьагымгдгалжрржащжамьпаиврьаюаяжваившоаяэихеапгширгвоал ающмжшоаяазихал ржагтьлкжаяиыоаушгазжвшоаюзилмгдганэгциввжангрощюевоаврюзжихапгзюая эжщьшоаяжхагдэгхмюйалрждгыжэмгвшоащжаушгшакюэваушгагыьмаьщарюзтьпакюэвгяаяахгисабьщмьаиврьамиарюзтьсамькгыжамиаыюхжразшгалюыюазьшжшоаьангмьхжшоальтгнжамжыийвоамжсшьаяэихеаиъиаэжщанэгврютжшоаяжтьарикцьсаьанэгэжлгшжшоаявиаших а\n",
+      "iter 0 : еавыиржраявиаыгнгрмьширом ианюмкш аягаяшгэгхаыгхжтмихащжыжмьсамгамиангрюзьрамьагымгдгалжрржащжамьпаиврьаюаяжваившоаяэихеапгширгвоал ающмжшоаяазихал ржагтьлкжаяиыоаушгазжвшоаюзилмгдганэгциввжангрощюевоаврюзжихапгзюая эжщьшоаяжхагдэгхмюйалрждгыжэмгвшоащжаушгшакюэваушгагыьмаьщарюзтьпакюэвгяакгшгэ иаеанэгпгыьраьамжяиэмгиавжх саьмшиэивм самькгдыжамиаыюхжразшгалюыюазьшжшоаьангмьхжшоальтгнжамжыийвоамжсшьаяэихеаиъиаэжщанэгврютжшоаяжтьарикцьсаьанэгэжлгшжшоаявиаших ашжкакжкангмьхжйазшгамюбмганэьргбьшоаиъиалгротиаювьрьсазшгл агвягьшоахжшиэьжр аиъиаэжщавнжвьлга\n",
       "\n",
-      "iter 15000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прожесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов в моей физни если не лучший никода не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекжий и проработать все темы \n",
+      "iter 15000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов которые я проходил и наверное самый интересный никогда не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекций и проработать все темы так как понимаю что нужно приложить еще больше усилий чтобы освоить материалы еще раз спасибо \n",
       "\n",
-      "iter 30000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прожесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов в моей физни если не лучший никода не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекжий и проработать все темы \n",
+      "iter 30000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов которые я проходил и наверное самый интересный никогда не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекций и проработать все темы так как понимаю что нужно приложить еще больше усилий чтобы освоить материалы еще раз спасибо \n",
       "\n",
-      "iter 45000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прожесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов в моей физни если не лучший никода не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекжий и проработать все темы \n",
+      "iter 45000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прощесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов которые я проходил и наверное самый интересный никогда не думал что буду читать и понимать бишопа надеюсь найти время еце раз прослушать ваши лекщий и проработать все темы так как понимаю что нужно приложить еце больше усилий чтобы освоить материалы еце раз спасибо \n",
       "\n",
-      "iter 60000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прожесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов в моей физни если не лучший никода не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекжий и проработать все темы \n",
+      "iter 60000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов которые я проходил и наверное самый интересный никогда не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекций и проработать все темы так как понимаю что нужно приложить еще больше усилий чтобы освоить материалы еще раз спасибо \n",
       "\n",
-      "iter 75000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прожесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов в моей физни если не лучший никода не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекжий и проработать все темы \n",
+      "iter 75000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов которые я проходил и наверное самый интересный никогда не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекций и проработать все темы так как понимаю что нужно приложить еще больше усилий чтобы освоить материалы еще раз спасибо \n",
       "\n",
-      "iter 90000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прожесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов в моей физни если не лучший никода не думал что буду читать и понимать бишопа надеюсь найти время еце раз прослушать ваши лекжий и проработать все темы \n",
+      "iter 90000 : я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов которые я проходил и наверное самый интересный никогда не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекций и проработать все темы так как понимаю что нужно приложить еще больше усилий чтобы освоить материалы еще раз спасибо \n",
       "\n",
-      "Iterations 100000, accepted 435, rejected 99565\n"
+      "Iterations 100000, accepted 374, rejected 99626\n"
      ]
     }
    ],
@@ -436,19 +438,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Принято всего лишь 435 состоянии, думаю это из-за не очень хорошего q распределения, но ничего лучше придумать не смог"
+    "#### Принято всего лишь 374 состоянии, думаю это из-за не очень хорошего q распределения, но ничего лучше придумать не смог"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Хотя получили всего лишь 435 точек, получим из этого распределния наиболее вероятный шифр и расшифруем текст"
+    "#### Хотя получили всего лишь 374 точек, получим из этого распределния наиболее вероятный шифр и расшифруем текст"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,16 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного прожесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов в моей физни если не лучший никода не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекжий и проработать все темы '"
+       "'я сделал все дополнительные пункты во втором домашнем заданий но не получил ни одного балла за них если у вас есть время хотелось бы узнать в чем была ошибка ведь это часть учебного процесса пользуясь случаем хочу выразить вам огромную благодарность за этот курс это один из лучших курсов которые я проходил и наверное самый интересный никогда не думал что буду читать и понимать бишопа надеюсь найти время еще раз прослушать ваши лекций и проработать все темы так как понимаю что нужно приложить еще больше усилий чтобы освоить материалы еще раз спасибо '"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
