Add some explanations

--- a/hw3/hw3.ipynb
+++ b/hw3/hw3.ipynb
@@ -300,17 +300,27 @@
     "Предположим, что Марковская цепь для этой задачи имеет просторанство состоянии $X$, состоящих из всех возможных шифр.\n",
     "В таком случае, для расчета стационарного распределения этой цепи используем сэмплирование по Метрополису-Гастингсу\n",
     "\n",
-    "$r(b_1, b_2)$ - количество биграмм $b_1b_2$ - в корпусе текста WarAndPeace.txt\n",
+    "$r(b_i, b_j)$ - количество биграмм $b_ib_j$ - в корпусе текста WarAndPeace.txt\n",
     "\n",
-    "$f(b_1, b_2)$ - количество биграмм $b_1b_2$ - в расшифрованном ключом $x$ тексте. ($x$ принадлежит $X$)\n",
+    "$f(b_i, b_j)$ - количество биграмм $b_ib_j$ - в расшифрованном ключом $x$ тексте. ($x$ принадлежит $X$)\n",
+    "\n",
+    "$N = \\sum_{b_i, b_j}^{} r(b_i, b_j) $ - общее количество всех биграмм в корпусе\n",
+    "\n",
+    "$N_s = \\sum_{b_i, b_j}^{} f(b_i, b_j) $ - общее количество всех биграмм в расшифрованном ключом $x$ тексте\n",
+    "\n",
+    "$p(b_i, b_j) = \\frac{r(b_i, b_j)}{N}$ - вероятность биграммы $b_ib_j$\n",
+    "\n",
+    "Распишем правдободобие:\n",
+    "\n",
+    "$p(text|x) =  \\prod_{}^{N_s} p(b_i, b_j) = \\prod_{}^{N_s} \\frac{r(b_i, b_j)}{N}$\n",
+    "\n",
+    "Так как $N$ константа, то ей можно пренебречь, с учетом этого и $f(b_i, b_j)$ распишем правдободобие заново:\n",
     " \n",
-    "Для расчета правдоподобия используем следующую формулу:\n",
-    "\n",
-    "$L = \\prod_{i=1}^{N} r(b_1, b_2) ^ {f(b_1, b_2)}$\n",
+    "$p(text|x) = \\prod_{b_i, b_j}^{} r(b_i, b_j) ^ {f(b_i, b_j)}$\n",
     "\n",
     "Логарифм правдоподобия:\n",
     "\n",
-    "$L = \\sum_{i=1}^{N} f(b_1, b_2) * log(r(b_1, b_2))$\n",
+    "$l = \\sum_{b_i, b_j}^{} f(b_i, b_j) * log(r(b_i, b_j))$\n",
     "\n",
     "В качестве q сэмплирования будем менять случайные две буквы местами"
    ]
